<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorBackground"
    tools:context=".postgraduate.PostgraduateActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Row 1 -->
            <android.support.v7.widget.CardView
                android:layout_height="70dp"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:onClick="keAFI">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/afi"
                        android:textSize="16sp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Row 2 -->
            <android.support.v7.widget.CardView
                android:layout_height="70dp"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:onClick="kePBA">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pba"
                        android:textSize="16sp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- Row 3 -->
            <android.support.v7.widget.CardView
                android:layout_height="70dp"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:onClick="keHES">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hes"
                        android:textSize="16sp"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:columnOrderPreserved="false"
        android:alignmentMode="alignMargins"
        android:rowCount="1"
        android:columnCount="1">


    </GridLayout>
</LinearLayout>