<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!--Undergraduate-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <android.support.v7.widget.CardView
            android:id="@+id/card_s1"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <!--android:onClick="goAbout">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_s1_blue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/s1"
                        android:textSize="16sp"
                        android:textColor="@android:color/black" />
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>
    <!--Postgraduate-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <android.support.v7.widget.CardView
            android:id="@+id/card_s2"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <!--android:onClick="goAbout">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_s2_blue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/s2"
                        android:textSize="16sp"
                        android:textColor="@android:color/black" />
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>
    <!--Doctoral-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <android.support.v7.widget.CardView
            android:id="@+id/card_s3"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <!--android:onClick="goAbout">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_s3_blue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/s3"
                        android:textSize="16sp"
                        android:textColor="@android:color/black" />
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>
    <!--Training For Young Ulama-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <!--android:onClick="goAbout">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:padding="10dp"
                        android:src="@drawable/ic_pku_blue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pku"
                        android:textSize="16sp"
                        android:textColor="@android:color/black" />
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


</LinearLayout>